--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bulma": "^0.9.4",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.5",
     "react": "^18.2.0",
